# citycheck

./: .env.example  .gitignore  README.md  app_config.toml.example  citycheck_backup.sql  citycheck_backup.sqlite  config.toml  init_data.json  pyproject.toml
data/: init_data.json.example
docs/: anforderungsanalyse.md
docs/results/: anforderungsanalyse.md
docs/results/erm/: citycheck_erm.drawio  citycheck_erm_1.drawio
scripts/: _project_env.sh  ai.sh  bump-version.sh  run.sh
src/citycheck/: __init__.py  main.py  settings.py  utils.py
src/citycheck/api/: cli.py  filters_forms.py  main.py  security.py  utils.py
src/citycheck/api/crud/: __init__.py  activity.py  continent.py  contintent.py  country.py  currency.py  language.py  location.py  region.py  subregion.py  user.py  user_activity.py  user_location.py  user_password.py
src/citycheck/api/filters_forms/: continents.py  countries.py  currencies.py  languages.py  locations.py  query_params.py  regions.py  user_location.py  users.py
src/citycheck/api/models/: activity.py  continent.py  country.py  currency.py  location.py  region.py  user.py
src/citycheck/api/routers/: __init__.py  countries.py  currencies.py  languages.py  locations.py  regions.py  users.py  utils.py
src/citycheck/api/routers/api/: __init__.py  auth.py  continents.py  countries.py  currencies.py  languages.py  misc.py  regions.py  users.py  users_locations.py
src/citycheck/api/routers/web/: __init__.py  auth.py  countries.py  index.py  settings.py  weather.py
src/citycheck/core/: __init__.py  cli.py  setup.py  utils.py
src/citycheck/core/cli/: main.py  parser.py  utils.py
src/citycheck/core/crud/: contintent.py  currency.py  location.py  region.py  user.py  user_crud.py
src/citycheck/core/requests/: get.py  sources.py
src/citycheck/core/setup/: __init__.py  cli.py  data.py  inserts.py  setup.py  utils.py
src/citycheck/core/utils/: __init__.py  config.py  dev.py  enums.py  utils.py
src/citycheck/core/validation/models/: continent.py  country.py  currency.py  language.py  (+3 more)
src/citycheck/db/: db.py  models.py  types.py
src/citycheck/web/: templates.py
src/citycheck/web/routers/: countries.py
src/web/static/css/: style.css
src/web/static/js/: redirect.js
src/web/templates/: base.html  index.html
src/web/templates/components/: navbar.html
src/web/templates/countries/: _list.html  index.html
src/web/templates/index/: _index_login.html  _index_page.html  _index_page_sidebar.html  _index_user_locations.html  index.html
src/web/templates/login/: index.html
src/web/templates/logout/: index.html
src/web/templates/settings/: _user_data.html  index.html  settings.html
src/web/templates/signup/: index.html
src/web/templates/weather/: index.html
