[project]
name = "citycheck"
version = "0.0.0"
description = "Manage and compare your favorite travel destinations"
readme = "README.md"
authors = [
    { name = "lilapapierschwein", email = "kai.elsaesser@posteo.de" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]

[project.scripts]
citycheck = "citycheck:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[tool.basedpyright]
# we want to handle library code explicity
reportExplicitAny = false
reportAny = false
